--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 :root {
   --header-height: 56px;
+  --toggle-width: 56px;
 }
 
 .header {
@@ -8,21 +9,44 @@
   display: flex;
   align-items: center;
   padding: 0 1em;
+  position: relative;
 }
 
-.menuIcon {
-  /* display: none; */
-  width: 32px;
-  height: 32px;
+.sidebarToggle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: var(--toggle-width);
+  height: var(--header-height);
+  box-sizing: border-box;
+  padding: 16px;
   background: none;
   border: none;
   margin-right: 1em;
   cursor: pointer;
+  display: flex;
 }
 
-.menuIcon span,
-.menuIcon span:before,
-.menuIcon span:after {
+
+:global(body:not([data-ismobile])) .sidebarToggle {
+  padding: 24px;
+}
+:global([data-ismobile] .sidebar-open) .sidebarToggle {
+  width: var(--toggle-width);
+  position: absolute;
+  height: 100vh;
+  z-index: 100;
+}
+
+.sidebarToggle .menuIcon {
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+
+.sidebarToggle .menuIcon span,
+.sidebarToggle .menuIcon span:before,
+.sidebarToggle .menuIcon span:after {
   display: block;
   background: var(--fgColor-default);
   height: 3px;
@@ -32,15 +56,15 @@
   transition: 0.2s all;
 }
 
-.menuIcon span:before,
-.menuIcon span:after {
+.sidebarToggle .menuIcon span:before,
+.sidebarToggle .menuIcon span:after {
   content: "";
   position: absolute;
   left: 0;
 }
 
-.menuIcon span:before { top: -9px; }
-.menuIcon span:after { top: 9px; }
+.sidebarToggle .menuIcon span:before { top: 18px; }
+.sidebarToggle .menuIcon span:after { top: 9px; }
 
 .headerTitle {
   font-size: 1.5em;
