--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -7,7 +7,8 @@
   }
   width: var(--sidebar-width);
   padding: 1.5em 1em 1em 1em;
-  overflow-y: auto;
+  overflow-y: scroll;
+  height: 100vh;
   box-sizing: border-box;
   transition: margin 0.25s cubic-bezier(.4,0,.2,1);
   z-index: 10;
